--- a/Git/index.html
+++ b/Git/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ul>
+    <hr>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>PHP</li>
+    </ol>
 </body>
 </html>
