--- a/Git/index.html
+++ b/Git/index.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>İlk Web sitesi</title>
 </head>
 <body>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-    </ul>
-    <hr>
-    <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>PHP</li>
-    </ol>
+    <h1>Cihan Alıcı</h1>
+    <h3>Hakkımda</h3>
+    <p>Merhaba ben Cihan Alıcı Mersin'de yaşıyorum web development ile ilgileniyorum.</p>
+    <h2>Sevdiğim Diziler</h2>
+    <h4>Halt And Catch Fire</h4>
+    <p>Günümüzde bilgisayarların, internetin ve html gibi dillerin oluşumunu anlatan dizi.</p>
+    <p>Dizide en çok dikkatimi çeker karakter Joe Mcmillandır.</p>
+
 </body>
 </html>
