--- a/Git/index.html
+++ b/Git/index.html
@@ -10,10 +10,29 @@
     <h1>Cihan Alıcı</h1>
     <h3>Hakkımda</h3>
     <p>Merhaba ben Cihan Alıcı Mersin'de yaşıyorum web development ile ilgileniyorum.</p>
-    <h2>Sevdiğim Diziler</h2>
-    <h4>Halt And Catch Fire</h4>
-    <p>Günümüzde bilgisayarların, internetin ve html gibi dillerin oluşumunu anlatan dizi.</p>
-    <p>Dizide en çok dikkatimi çeker karakter Joe Mcmillandır.</p>
 
+    <ol>
+        <li>Film</li>
+        <ul>
+            <li>Fight Club</li>
+            <li>Se7en</li>
+            <li>İnception</li>
+        </ul>
+        <li>Dizi</li>
+        <ul>
+            <li>Halt And Catch Fire</li>
+            <li>Sherlock</li>
+            <li>Breaking Bad</li>
+        </ul>
+        <li>Kitap</li>
+        <ul>
+            <li>Olasılıksız</li>
+            <li>Mesaj</li>
+            <li>Kinyas ve Kayra</li>
+        </ul>
+    </ol>
+    <img src="HACF.jpg" alt="Halt And Catch Fire">
+    <p>Günümüzde bilgisayarların, internetin ve html gibi dillerin oluşumunu anlatan dizi.</p>
+    
 </body>
 </html>
