--- a/Git/HTML-Bölüm-Sonu/index.html
+++ b/Git/HTML-Bölüm-Sonu/index.html
@@ -35,6 +35,12 @@
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Impedit qui mollitia nemo ex?</p>
             <p>Ratione similique dolores expedita magnam.</p>
+            <ol>
+                <li>Lorem, ipsum dolor.</li>
+                <li>Alias, magni omnis!</li>
+                <li>Deleniti, voluptatem eligendi.</li>
+                <li>Cumque, ab? Quo.</li>
+            </ol>
             <hr>
         </article>
         <article>
@@ -44,6 +50,12 @@
             <p>Lorem ipsum dolor sit amet.</p>
             <p>Impedit qui mollitia nemo ex?</p>
             <p>Ratione similique dolores expedita magnam.</p>
+            <ul>
+                <li>Lorem, ipsum dolor.</li>
+                <li>Alias, magni omnis!</li>
+                <li>Deleniti, voluptatem eligendi.</li>
+                <li>Cumque, ab? Quo.</li>
+            </ul>
             <hr>
         </article>
         <article>
