--- a/Git/CSS/ödev-2/index.html
+++ b/Git/CSS/ödev-2/index.html
@@ -12,8 +12,8 @@
         <ul class="header">
           <li class="pic headerli">
             <a href="https://github.com/Deadburn" target="_blank"
-              ><img
-                src="assets/profilepic.jpg"
+              ><img class="user"
+                src="assets/user.png"
                 alt=""
                 style="margin-right: 1px;"
             /></a>
