--- a/Git/Bootstrap/instagramclone/index.html
+++ b/Git/Bootstrap/instagramclone/index.html
@@ -15,14 +15,14 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/instagramclone/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Instagram</title>
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-sm navbar-light border"
+      class="navbar navbar-expand-sm navbar-light border sticky-top "
     >
-      <div class="logo">
+      <div class="logo ml-192px">
             <a class="navbar-brand" href="#"
               ><img
                 src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png"
@@ -39,7 +39,8 @@
               <span class="navbar-toggler-icon mr-5"></span>
             </button>
           </div>
-      <div class="collapse navbar-collapse">
+      <!--Kapya-->
+      <div class="collapse navbar-collapse d-flex justify-content-center ml-5">
         <form class="form-inline my-2 my-lg-0 ml-5 d-none d-sm-block">
           <input
             class="form-control mr-sm-2 empty"
@@ -51,9 +52,9 @@
         </form>
       </div>
       <div
-        class="collapse navbar-collapse"
+        class="collapse navbar-collapse ml-5 mt-2"
       >
-        <ul class="navbar-nav">
+        <ul class="navbar-nav d-sm-none d-md-flex">
           <li class="nav-item active">
             <a class="nav-link" href="#"
               ><i class="fas fa-home fa-lg mr-2 d-none d-sm-block mt-1"></i>
@@ -81,7 +82,7 @@
           <li class="nav-item">
             <a class="nav-link" href="https://www.instagram.com/cengizcmataraci" target="_blank"
               ><img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/83792429_185184289374945_1047727451901263872_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=oor-Z1FIzvgAX-uXuhs&tp=1&oh=e92baf321c3e2e5ebf9416204da05c82&oe=602E0320"
+                src="https://instagram.fada1-11.fna.fbcdn.net/v/t51.2885-19/s150x150/199672004_1002034483886416_7360255128017064006_n.jpg?tp=1&_nc_ht=instagram.fada1-11.fna.fbcdn.net&_nc_ohc=IhnF7ufL4SoAX85kjo9&edm=ALlQn9MBAAAA&ccb=7-4&oh=5443bf24db57bc6827388ce90a6437ea&oe=60DBBC7E&_nc_sid=48a2a6"
                 class="mb-2"
                 style="width: 23px; height: 23px; border-radius: 50%;"
             /></a>
@@ -97,7 +98,7 @@
             <div class="card-body">
               <a href="https://www.instagram.com/kodluyoruz" style="text-decoration: none;" target="_blank">
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/105971749_581051382486071_1053777149100084988_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=VMAJoeqh5IwAX_QH3Nt&tp=1&oh=3bd9dbd2532c87e350dfcfffec74f120&oe=602BAC27"
+                src="assets/kodluyoruz.jpg"
                 class="storyphoto img-fluid mr-3"
               />
               <span class="storytext">kodluyoruz</span>
