--- a/Git/Bootstrap/instagramclone/index.html
+++ b/Git/Bootstrap/instagramclone/index.html
@@ -20,9 +20,9 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-sm navbar-light border sticky-top "
+      class="navbar navbar-expand-sm navbar-light border sticky-top"
     >
-      <div class="logo ml-192px">
+      <div class="logo">
             <a class="navbar-brand" href="#"
               ><img
                 src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png"
@@ -36,7 +36,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon mr-5"></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
           </div>
       <!--Kapya-->
