--- a/Git/Bootstrap/instagramclone/index.html
+++ b/Git/Bootstrap/instagramclone/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-expand-sm navbar-light border sticky-top"
+      class="navbar navbar-expand-sm navbar-light border fixed-top "
     >
       <div class="logo">
             <a class="navbar-brand" href="#"
@@ -36,10 +36,9 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon mr-5"></span>
             </button>
           </div>
-      <!--Kapya-->
       <div class="collapse navbar-collapse d-flex justify-content-center ml-5">
         <form class="form-inline my-2 my-lg-0 ml-5 d-none d-sm-block">
           <input
@@ -80,9 +79,9 @@
             ></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.instagram.com/cengizcmataraci" target="_blank"
+            <a class="nav-link" href="https://www.instagram.com/deadburn/" target="_blank"
               ><img
-                src="https://instagram.fada1-11.fna.fbcdn.net/v/t51.2885-19/s150x150/199672004_1002034483886416_7360255128017064006_n.jpg?tp=1&_nc_ht=instagram.fada1-11.fna.fbcdn.net&_nc_ohc=IhnF7ufL4SoAX85kjo9&edm=ALlQn9MBAAAA&ccb=7-4&oh=5443bf24db57bc6827388ce90a6437ea&oe=60DBBC7E&_nc_sid=48a2a6"
+                src="assets/cihan.jpg"
                 class="mb-2"
                 style="width: 23px; height: 23px; border-radius: 50%;"
             /></a>
@@ -91,11 +90,11 @@
       </div>
     </nav>
 
-    <div class="container middlearea">
+    <div class="container middlearea offset-2">
       <div class="row">
         <div class="col-6">
           <div class="card">
-            <div class="card-body">
+            <div class="card-body d-flex">
               <a href="https://www.instagram.com/kodluyoruz" style="text-decoration: none;" target="_blank">
               <img
                 src="assets/kodluyoruz.jpg"
@@ -103,58 +102,58 @@
               />
               <span class="storytext">kodluyoruz</span>
               </a>
-              <a href="https://www.instagram.com/furkantolgayuce" style="text-decoration: none;" target="_blank">
-              <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/72779108_713693839133901_6123578952603664384_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=XqPxbR5poVwAX-ZBLnj&tp=1&oh=8ced290d281ab30c73ecab574c569f2e&oe=602E8762"
-                class="storyphoto img-fluid"
-              />
-              <span class="storytext">furkantolga..</span>
-            </a>
               <a href="https://www.instagram.com/elonrmuskk" style="text-decoration: none;" target="_blank">
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/44329317_268583430479565_454483638147350528_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=nch-8fZvL_kAX-Vwc1_&tp=1&oh=834a7ad23234699addd8c447d3d754e6&oe=602E6230"
+                src="assets/elonmusk.jpg"
                 class="storyphoto img-fluid"
               />
-              <span class="storytext">elonrmuskk</span>
-            </a>
-              <a href="https://www.instagram.com/hakanyalcinkaya" style="text-decoration: none;" target="_blank">
+              <span class="storytext">elonmusk</span>
+              </a>
+              <a href="https://www.instagram.com/hastalik_bufutbol" style="text-decoration: none;" target="_blank">
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/14032987_493625937508971_230505040_a.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=c5Y_pjOla0AAX99HkoC&tp=1&oh=00f276b589b86e96148f8bd4bc9f9d3d&oe=602DF398"
+                src="assets/hbf.jpg"
                 class="storyphoto img-fluid"
               />
-            <span class="storytext">hakanyalcin..</span>
-            </a>
-              <a href="https://www.instagram.com/ozgeacik" style="text-decoration: none;" target="_blank">
+              <span class="storytext">hastalik_bu..</span>
+              </a>
+              <a href="https://www.instagram.com/tayfurlapsekioffical" style="text-decoration: none;" target="_blank">
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/119053109_669154464028736_1319092899898353971_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=NiXGvR0sHIUAX_K5Au0&tp=1&oh=b2dde859aadfda60ccbacefaf78214b2&oe=602D300C"
+                src="assets/lapseki.jpg"
                 class="storyphoto img-fluid"
               />
-            <span class="storytext mr-2">ozgeacik</span>
-            </a>
-              <a href="https://www.instagram.com/kablosuzkedi" style="text-decoration: none;" target="_blank">
+              <span class="storytext">lapsekili..</span>
+              </a>
+              <a href="https://www.instagram.com/ardakuralonline" style="text-decoration: none;" target="_blank">
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/891383_1620336344912760_190799662_a.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=wSpwFcLtz80AX-U66oZ&oh=5be739ba968afed2145c0be933c6ffa6&oe=602ECE8C"
+                src="assets/ardakural.jpg"
                 class="storyphoto img-fluid"
               />
-            <span class="storytext">kablosuzkedi</span>
-            </a>
-              <a href="https://www.instagram.com/gulcanyayla" style="text-decoration: none;" target="_blank">
+              <span class="storytext mr-2">ardakural</span>
+              </a>
+              <a href="https://www.instagram.com/kotu.kediserafettin" style="text-decoration: none;" target="_blank">
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/20066031_478409979176247_1637931957817966592_a.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=qVGZVeaAAyQAX-uPqnT&tp=1&oh=da209b286e6b9af6692a7eaab5db9fe7&oe=602C10BA"
+                src="assets/serafet.jpg"
                 class="storyphoto img-fluid"
               />
-                <span class="storytext">gulcanyayla</span>
-            </a>
+              <span class="storytext">kotu.kedi</span>
+              </a>
+              <a href="https://www.instagram.com/randyorton" style="text-decoration: none;" target="_blank">
+              <img
+                src="assets/randy.jpg"
+                class="storyphoto img-fluid"
+              />
+                <span class="storytext">randyorton</span>
+             </a>
             </div>
           </div>
-          <div class="card">
+          <div class="card mt-2">
             <div class="card-header">
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/83792429_185184289374945_1047727451901263872_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=oor-Z1FIzvgAX-uXuhs&tp=1&oh=e92baf321c3e2e5ebf9416204da05c82&oe=602E0320"
+                src="assets/cihan.jpg"
                 class="mr-2"
                 style="width: 35px; height: 35px; border-radius: 50%"
               />
-              <span class="postuserfont"><strong><a href="https://www.instagram.com/cengizcmataraci" target="_blank" style="color: black;">cengizcmataraci</a></strong></span>
+              <span class="postuserfont"><strong><a href="https://www.instagram.com/cengizcmataraci" target="_blank" style="color: black;">cihan</a></strong></span>
               <span class="mt-2"
                 ><strong><i class="fas fa-ellipsis-h"></i></strong
               ></span>
@@ -215,20 +214,20 @@
             </ul>
             <span>
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/72779108_713693839133901_6123578952603664384_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=XqPxbR5poVwAX-ZBLnj&tp=1&oh=8ced290d281ab30c73ecab574c569f2e&oe=602E8762"
+                src="assets/elonmusk.jpg"
                 class="mb-1 ml-3"
                 style="width: 23px; height: 23px; border-radius: 50%"
               />
               <span class="postuserfont"
-                ><strong>furkantolgayuce</strong> ve
+                ><strong>elonmusk</strong> ve
                 <strong>42 diğer kişi</strong> beğendi</span
               >
             </span>
             <div class="card-body" style="margin-top: -15px">
               <p class="card-text postuserfont">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >cengizcmataraci</strong
-                >Burası Rize! Harika bir cennet!
+                  >cihan</strong
+                >Manzara çok güzel!
               </p>
               <a href="#" style="text-decoration: none"
                 ><p
@@ -244,12 +243,12 @@
               >
               <p class="card-text postuserfont">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >furkantolgayuce</strong
-                >Abi çok güzelmiş yaa! Bir gün götürürsün artık bizi de:)
+                  >elonmusk</strong
+                >Abi çok güzelmiş yaa! Teslamı alıp geliyorum :)
               </p>
               <p class="card-text postuserfont" style="margin-top: -15px">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >elonrmuskk</strong
+                  >randyorton</strong
                 >That's wonderful view bro! I always want to travel Rize...
               </p>
               <p
@@ -283,7 +282,7 @@
           <div class="card">
             <div class="card-header">
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/105971749_581051382486071_1053777149100084988_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=VMAJoeqh5IwAX_QH3Nt&tp=1&oh=3bd9dbd2532c87e350dfcfffec74f120&oe=602BAC27"
+                src="assets/kodluyoruz.jpg"
                 class="mr-2"
                 style="width: 35px; height: 35px; border-radius: 50%"
               />
@@ -348,12 +347,12 @@
             </ul>
             <span>
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/83792429_185184289374945_1047727451901263872_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=oor-Z1FIzvgAX-uXuhs&tp=1&oh=e92baf321c3e2e5ebf9416204da05c82&oe=602E0320"
+                src="assets/randy.jpg"
                 class="mb-1 ml-3"
                 style="width: 23px; height: 23px; border-radius: 50%"
               />
               <span class="postuserfont"
-                ><strong>cengizcmataraci</strong> ve
+                ><strong>randyorton</strong> ve
                 <strong>670 diğer kişi</strong> beğendi</span
               >
             </span>
@@ -377,12 +376,12 @@
               >
               <p class="card-text postuserfont">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >cengizcmataraci</strong
+                  >randyorton</strong
                 >Harika! Kesinlikle katılacağım! :)
               </p>
               <p class="card-text postuserfont" style="margin-top: -15px">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >kablosuzbeyin</strong
+                  >lapsekilitayfur</strong
                 >Topluluk olarak heyecanlıyız!
               </p>
               <p
@@ -416,11 +415,11 @@
           <div class="card mb-3">
             <div class="card-header">
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/44329317_268583430479565_454483638147350528_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=nch-8fZvL_kAX-Vwc1_&tp=1&oh=834a7ad23234699addd8c447d3d754e6&oe=602E6230"
+                src="assets/elonmusk.jpg"
                 class="mr-2"
                 style="width: 35px; height: 35px; border-radius: 50%"
               />
-              <span class="postuserfont"><strong>elonrmuskk</strong></span>
+              <span class="postuserfont"><strong>elonmuskk</strong></span>
               <span class="mt-2"
                 ><strong><i class="fas fa-ellipsis-h"></i></strong
               ></span>
@@ -481,19 +480,19 @@
             </ul>
             <span>
               <img
-                src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/83792429_185184289374945_1047727451901263872_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=oor-Z1FIzvgAX-uXuhs&tp=1&oh=e92baf321c3e2e5ebf9416204da05c82&oe=602E0320"
+                src="assets/lapseki.jpg"
                 class="mb-1 ml-3"
                 style="width: 23px; height: 23px; border-radius: 50%"
               />
               <span class="postuserfont"
-                ><strong>cengizcmataraci</strong> ve
+                ><strong>lapsekilitayfur</strong> ve
                 <strong>900.182 diğer kişi</strong> beğendi</span
               >
             </span>
             <div class="card-body" style="margin-top: -15px">
               <p class="card-text postuserfont">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >elonrmussk</strong
+                  >elonmuskk</strong
                 >That's just beautiful!
               </p>
               <a href="#" style="text-decoration: none"
@@ -510,7 +509,7 @@
               >
               <p class="card-text postuserfont">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >cengizcmataraci</strong
+                  >lapsekilitayfur</strong
                 >Yeah! Here you go!
               </p>
               <p class="card-text postuserfont" style="margin-top: -15px">
@@ -559,7 +558,7 @@
                   >
                   <span>
                   <img
-                    src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/83792429_185184289374945_1047727451901263872_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=oor-Z1FIzvgAX-uXuhs&tp=1&oh=e92baf321c3e2e5ebf9416204da05c82&oe=602E0320"
+                    src="assets/cihan.jpg"
                     class=""
                     style="
                       width: 60px;
@@ -578,7 +577,7 @@
                       color: black;
                       margin-left: 20px;
                     "
-                    ><strong>cengizcmataraci</strong>
+                    ><strong>cihanalici</strong>
                     </span>
                   </span>
                 </a>
@@ -603,13 +602,13 @@
                   <div>
                     <span
                       ><img
-                        src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/136764073_2862337494054607_1355990075667286005_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=3MHMOXdKP6cAX-WCyqg&tp=1&oh=ac33152da872b66e414b29d07b6c35ff&oe=602ED931"
+                        src="assets/alex.jpg"
                         style="width: 30px; height: 30px; border-radius: 50%"
                       />
                     </span>
-                    <a href="https://www.instagram.com/kablosuzbeyin" target="_blank">
+                    <a href="https://www.instagram.com/alexcfc10/" target="_blank">
                     <span class="postuserfont ml-2 mt-1"
-                      ><strong>kablosuzbeyin</strong></span
+                      ><strong>alex de souza</strong></span
                     >
                     <span
                       class="postuserfont"
@@ -621,13 +620,13 @@
                   <div class="mt-3">
                     <span
                       ><img
-                        src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/135278730_818218959037021_4706682874061565439_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=ZcMoHQ8jKZgAX88HPLQ&tp=1&oh=2023068e1dfea5cccffd10bffecca9c4&oe=602F5808"
+                        src="assets/hackersploit.jpg"
                         style="width: 30px; height: 30px; border-radius: 50%"
                       />
                     </span>
-                    <a href="https://www.instagram.com/codecraftcom" target="_blank">
+                    <a href="https://www.instagram.com/hackersploit/" target="_blank">
                     <span class="postuserfont ml-2 mt-1"
-                      ><strong>codecraftcom </strong></span
+                      ><strong>hackersploit </strong></span
                     >
                     <span
                       class="postuserfont"
@@ -639,13 +638,13 @@
                   <div class="mt-3">
                     <span
                       ><img
-                        src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/31495253_240585426490915_5836624022825074688_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=cPDm1HkyR00AX853Kwb&tp=1&oh=c8165bf46f38be25d28883123c419772&oe=602D147C"
+                        src="assets/csgo.jpg"
                         style="width: 30px; height: 30px; border-radius: 50%"
                       />
                     </span>
-                    <a href="https://www.instagram.com/navlungotr" target="_blank">
+                    <a href="https://www.instagram.com/csgo_dev/" target="_blank">
                     <span class="postuserfont ml-2 mt-1"
-                      ><strong>navlungotr</strong></span
+                      ><strong>csgo_dev</strong></span
                     >
                     <span
                       class="postuserfont"
@@ -657,13 +656,13 @@
                   <div class="mt-3">
                     <span
                       ><img
-                        src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/94766381_265471701511060_6041416400029876224_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=mQMQvy2AF8QAX887wrH&tp=1&oh=4670ba101eddc6e0f54b15f53b432ff5&oe=602F5C23"
+                        src="assets/totti.jpg"
                         style="width: 30px; height: 30px; border-radius: 50%"
                       />
                     </span>
                     <a href="https://www.instagram.com/podfreshco" target="_blank">
                     <span class="postuserfont ml-2 mt-1"
-                      ><strong>podfreshco</strong></span
+                      ><strong>francescototti</strong></span
                     >
                     <span
                       class="postuserfont"
@@ -674,13 +673,13 @@
                   <div class="mt-3">
                     <span
                       ><img
-                        src="https://scontent-otp1-1.cdninstagram.com/v/t51.2885-19/s150x150/121780232_471629500408445_1284251206825421967_n.jpg?_nc_ht=scontent-otp1-1.cdninstagram.com&_nc_ohc=pF5Lhq2mP3gAX_M_HUg&tp=1&oh=84447ff663f0e15901cf8b446bb9fa18&oe=602DD5CA"
+                        src="assets/hüsnü.jpg"
                         style="width: 30px; height: 30px; border-radius: 50%"
                       />
                     </span>
-                    <a href="https://www.instagram.com/kodluyoruz_junior" target="_blank">
+                    <a href="https://www.instagram.com/baskomisercoban/" target="_blank">
                     <span class="postuserfont ml-2 mt-1"
-                      ><strong>Kodluyoruz Junior</strong></span
+                      ><strong>Hüsnü Çoban</strong></span
                     >
                     <span
                       class="postuserfont"
