--- a/Git/Bootstrap/instagramclone/index.html
+++ b/Git/Bootstrap/instagramclone/index.html
@@ -147,13 +147,13 @@
             </div>
           </div>
           <div class="card mt-2">
-            <div class="card-header">
+            <div class="card-header bg-light">
               <img
                 src="assets/cihan.jpg"
                 class="mr-2"
                 style="width: 35px; height: 35px; border-radius: 50%"
               />
-              <span class="postuserfont"><strong><a href="https://www.instagram.com/cengizcmataraci" target="_blank" style="color: black;">cihan</a></strong></span>
+              <span class="postuserfont"><strong><a href="https://www.instagram.com/deadburn" target="_blank" style="color: black;">cihan</a></strong></span>
               <span class="mt-2 float-right"
                 ><strong><i class="fas fa-ellipsis-h"></i></strong
               ></span>
@@ -264,7 +264,7 @@
               </p>
             </div>
             <div
-              class="card-footer"
+              class="card-footer bg-light"
               style="
                 color: rgb(139, 133, 133);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -274,13 +274,13 @@
               "
             >
               <span style="margin-left: -4px">Yorum Ekle...</span
-              ><span class="" style="color: #0095f6; opacity: 50%"
+              ><span class="float-right" style="color: #0095f6; opacity: 50%"
                 ><strong>Paylaş</strong></span
               >
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
+            <div class="card-header bg-light">
               <img
                 src="assets/kodluyoruz.jpg"
                 class="mr-2"
@@ -397,7 +397,7 @@
               </p>
             </div>
             <div
-              class="card-footer"
+              class="card-footer bg-light"
               style="
                 color: rgb(139, 133, 133);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -407,13 +407,13 @@
               "
             >
               <span style="margin-left: -4px">Yorum Ekle...</span
-              ><span class="" style="color: #0095f6; opacity: 50%"
+              ><span class="float-right" style="color: #0095f6; opacity: 50%"
                 ><strong>Paylaş</strong></span
               >
             </div>
           </div>
           <div class="card mb-3">
-            <div class="card-header">
+            <div class="card-header bg-light">
               <img
                 src="assets/elonmusk.jpg"
                 class="mr-2"
@@ -530,7 +530,7 @@
               </p>
             </div>
             <div
-              class="card-footer"
+              class="card-footer bg-light"
               style="
                 color: rgb(139, 133, 133);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -540,7 +540,7 @@
               "
             >
               <span style="margin-left: -4px">Yorum Ekle...</span
-              ><span class="" style="color: #0095f6; opacity: 50%"
+              ><span class="float-right" style="color: #0095f6; opacity: 50%"
                 ><strong>Paylaş</strong></span
               >
             </div>
@@ -548,11 +548,11 @@
         </div>
         <div class="col-3">
           <div
-            class="card col-xs-12 rightpanel"
+            class="col-xs-12 position-fixed rightpanel"
             id="sticky-sidebar"
             style="width: 18rem"
           >
-            <div class="card-body d-flex" >
+            <div class="card-body d-flex " >
               <div>
                 <a class="nav-link" href="#"
                   >
@@ -593,7 +593,7 @@
                     >Senin İçin Öneriler</span
                   >
                   <span
-                    class="postuserfont mt-1"
+                    class="postuserfont mt-1 float-right"
                     style="font-size: 12px"
                     ><strong>Tümünü Gör</strong></span
                   >
@@ -611,7 +611,7 @@
                       ><strong>alex de souza</strong></span
                     >
                     <span
-                      class="postuserfont"
+                      class="postuserfont float-right"
                       style="font-size: 13px; color: #0095f6; margin-top: 5px"
                       ><strong>Takip Et</strong></span
                     >
@@ -629,7 +629,7 @@
                       ><strong>hackersploit </strong></span
                     >
                     <span
-                      class="postuserfont"
+                      class="postuserfont float-right"
                       style="font-size: 13px; color: #0095f6; margin-top: 5px"
                       ><strong>Takip Et</strong></span
                     >
@@ -647,7 +647,7 @@
                       ><strong>csgo_dev</strong></span
                     >
                     <span
-                      class="postuserfont"
+                      class="postuserfont float-right"
                       style="font-size: 13px; color: #0095f6; margin-top: 5px"
                       ><strong>Takip Et</strong></span
                     >
@@ -665,7 +665,7 @@
                       ><strong>francescototti</strong></span
                     >
                     <span
-                      class="postuserfont"
+                      class="postuserfont float-right"
                       style="font-size: 13px; color: #0095f6; margin-top: 5px"
                       ><strong>Takip Et</strong></span
                     >
@@ -682,7 +682,7 @@
                       ><strong>Hüsnü Çoban</strong></span
                     >
                     <span
-                      class="postuserfont"
+                      class="postuserfont float-right"
                       style="font-size: 13px; color: #0095f6; margin-top: 5px"
                       ><strong>Takip Et</strong></span
                     >
