--- a/Git/Bootstrap/mediumclone/index.html
+++ b/Git/Bootstrap/mediumclone/index.html
@@ -13,10 +13,14 @@
     <title>Medium</title>
 </head>
 <body>
-    <div class="bg-yellow border-bottom-dark"> 
+    <div class="bg-yellow border-bottom-dark py-1"> 
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#">Medium</a>
+                <a class="navbar-brand" href="#">
+                    <strong>
+                        Medium
+                    </strong>
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -37,7 +41,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Sign In</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item ml-3">
                         <a class="nav-link btn btn-dark text-light" href="#">Get Started</a>
                     </li>
                   </ul>
@@ -59,11 +63,313 @@
                     <a href="#" class="btn btn-outline-dark">Get Started</a>
                 </div>
                 <div class="col-6">
-                    gorsel
+                    <img src="img/rightmiddle.jpeg" alt="Middle Background Image" class="rounded-circle float-right">
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-12 mb-2">
+                <h6>
+                    <i class="fas fa-rocket"></i>
+                    <small class="ml-2">TRENDING ON MEDIUM</small>
+                </h6>
+            </div>
+            <article class="col-sm-4 mb-2">
+                <div class="row">
+                    <div class="col-2">
+                        <h6 class="text-black-50">01</h6>
+                    </div>
+                    <div class="col-10">
+                        <img class="rounded-circle" src="https://picsum.photos/id/11/25/25" alt="">
+                        <span class="small ml-1">Will Smith</span>
+                        <h6 class="mt-2">
+                            <strong>Confessions of a Pandemic Risk-Taker</strong>
+                        </h6>
+
+                        <ul class="list-inline small">
+                            <li class="list-inline-item">Dec 1</li>
+                            <li class="list-inline-item">6 min read</li>
+                            <li class="list-inline-item">
+                                <i class="far fa-star"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-sm-4 mb-2">
+                <div class="row">
+                    <div class="col-2">
+                        <h6 class="text-black-50">02</h6>
+                    </div>
+                    <div class="col-10">
+                        <img class="rounded-circle" src="https://picsum.photos/id/12/25/25" alt="">
+                        <span class="small ml-1">
+                            The Sharp Ninja
+                        </span>
+                        <h6 class="mt-2">
+                            <strong>Visual Studio 2022 Preview 1 — 64-Bit Has Arrived!</strong>
+                        </h6>
+
+                        <ul class="list-inline small">
+                            <li class="list-inline-item">Dec 1</li>
+                            <li class="list-inline-item">3 min read</li>
+                            <li class="list-inline-item">
+                                <i class="far fa-star"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-sm-4 mb-2">
+                <div class="row">
+                    <div class="col-2">
+                        <h6 class="text-black-50">03</h6>
+                    </div>
+                    <div class="col-10">
+                        <img class="rounded-circle" src="https://picsum.photos/id/13/25/25" alt="">
+                        <span class="small ml-1">Markham Heid
+                            <span class="small">in</span> 
+                            Elemental</span>
+                        <h6 class="mt-2">
+                            <strong>The Breath Is a Back Door to Your Vagus Nerve</strong>
+                        </h6>
+
+                        <ul class="list-inline small">
+                            <li class="list-inline-item">Dec 1</li>
+                            <li class="list-inline-item">4 min read</li>
+                            <li class="list-inline-item">
+                                <i class="far fa-star"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-sm-4 mb-2">
+                <div class="row">
+                    <div class="col-2">
+                        <h6 class="text-black-50">04</h6>
+                    </div>
+                    <div class="col-10">
+                        <img class="rounded-circle" src="https://picsum.photos/id/14/25/25" alt="">
+                        <span class="small ml-1">Arthur Hayes</span>
+                        <h6 class="mt-2">
+                            <strong>I Still Can’t Draw a Line</strong>
+                        </h6>
+
+                        <ul class="list-inline small">
+                            <li class="list-inline-item">Dec 1</li>
+                            <li class="list-inline-item">21 min read</li>
+                            <li class="list-inline-item">
+                                <i class="far fa-star"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-sm-4 mb-2">
+                <div class="row">
+                    <div class="col-2">
+                        <h6 class="text-black-50">05</h6>
+                    </div>
+                    <div class="col-10">
+                        <img class="rounded-circle" src="https://picsum.photos/id/15/25/25" alt="">
+                        <span class="small ml-1">Lyft Level 5</span>
+                        <h6 class="mt-2">
+                            <strong>Navigating San Francisco in Full Autonomy</strong>
+                        </h6>
+
+                        <ul class="list-inline small">
+                            <li class="list-inline-item">Dec 1</li>
+                            <li class="list-inline-item">2 min read</li>
+                            <li class="list-inline-item">
+                                <i class="far fa-star"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-sm-4 mb-2">
+                <div class="row">
+                    <div class="col-2">
+                        <h6 class="text-black-50">06</h6>
+                    </div>
+                    <div class="col-10">
+                        <img class="rounded-circle" src="https://picsum.photos/id/16/25/25" alt="">
+                        <span class="small ml-1">Peter Abilla
+                            <span class="small">in</span> 
+                            Harmony</span>
+                        <h6 class="mt-2">
+                            <strong>Sushi and Harmony Announce Full Stack Partnership with $4M in Incentives</strong>
+                        </h6>
+
+                        <ul class="list-inline small">
+                            <li class="list-inline-item">Dec 1</li>
+                            <li class="list-inline-item">6 min read</li>
+                            <li class="list-inline-item">
+                                <i class="far fa-star"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </article>
+
+        </div>
+        <div class="row mt-5">
+            <section class="col-sm-8">
+                <article class="row mb-3">
+                    <div class="col-8">
+                        <img class="rounded-circle" src="https://picsum.photos/id/13/25/25" alt="">
+                        <span class="small ml-1">Peter Abilla
+                            <span class="small">in</span> 
+                            Harmony</span>
+                        <h6 class="mt-2">
+                            <strong>Sushi and Harmony Announce Full Stack Partnership with $4M in Incentives</strong>
+                        </h6>
+                        <p>
+                            Solid-state batteries are poised to emerge in the coming years
+                        </p>
+                        <ul class="list-inline small">
+                            <li class="list-inline-item">Dec 1</li>
+                            <li class="list-inline-item">6 min read</li>
+                            <li class="list-inline-item">
+                                <i class="far fa-star"></i>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-4">
+                        <img src="https://picsum.photos/400/250" alt="" class="w-100">
+                    </div>
+                </article>
+                <article class="row mb-3">
+                    <div class="col-8">
+                        <img class="rounded-circle" src="https://picsum.photos/id/13/25/25" alt="">
+                        <span class="small ml-1">Peter Abilla
+                            <span class="small">in</span> 
+                            Harmony</span>
+                        <h6 class="mt-2">
+                            <strong>Sushi and Harmony Announce Full Stack Partnership with $4M in Incentives</strong>
+                        </h6>
+                        <p>
+                            Solid-state batteries are poised to emerge in the coming years
+                        </p>
+                        <ul class="list-inline small">
+                            <li class="list-inline-item">Dec 1</li>
+                            <li class="list-inline-item">6 min read</li>
+                            <li class="list-inline-item">
+                                <i class="far fa-star"></i>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-4">
+                        <img src="https://picsum.photos/id/23/400/250" alt="" class="w-100">
+                    </div>
+                </article>
+                <article class="row mb-3">
+                    <div class="col-8">
+                        <img class="rounded-circle" src="https://picsum.photos/id/13/25/25" alt="">
+                        <span class="small ml-1">Peter Abilla
+                            <span class="small">in</span> 
+                            Harmony</span>
+                        <h6 class="mt-2">
+                            <strong>Sushi and Harmony Announce Full Stack Partnership with $4M in Incentives</strong>
+                        </h6>
+                        <p>
+                            Solid-state batteries are poised to emerge in the coming years
+                        </p>
+                        <ul class="list-inline small">
+                            <li class="list-inline-item">Dec 1</li>
+                            <li class="list-inline-item">6 min read</li>
+                            <li class="list-inline-item">
+                                <i class="far fa-star"></i>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-4">
+                        <img src="https://picsum.photos/id/22/400/250" alt="" class="w-100">
+                    </div>
+                </article>
+            </section>
+            <aside class="col-sm-4">
+                <h6>
+                    <small>
+                        <strong>
+                            DISCOVER MORE OF WHAT MATTERS TO YOU
+                        </strong>
+                    </small>
+                </h6>
+                <ul class="list-inline aside-buttons">
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-sm btn-outline-secondary">
+                            Lorem.
+                        </a>
+                    </li>
+
+                    
+                    
+                </ul>
+            </aside>
+        </div>
+    </div> <!--Container - end -->
 
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
