--- a/Git/JavaScript/02/index.html
+++ b/Git/JavaScript/02/index.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        .text-primary {
+            color: blue;
+        }
+    </style>
 </head>
-<body>
+<body> 
+
+    <h1 id="greeting">Kodluyoruz - Front-End 101</h1>
+
+    
+    <!--  Javascript Lists
+        <ul id="list">
+        <li>Lorem.</li>
+        <li>Reiciendis.</li>
+        <li>Earum?</li>
+    </ul> -->
+
+
+
     
     <script src="index.js">
     </script>
