--- a/Git/JavaScript/02/index.html
+++ b/Git/JavaScript/02/index.html
@@ -10,12 +10,16 @@
         .text-primary {
             color: blue;
         }
+
+        .text-danger {
+            color: red;
+        }
     </style>
 </head>
 <body> 
 
     <h1 id="greeting">Kodluyoruz - Front-End 101</h1>
-
+    <p id="info"></p>
     
     <!--  Javascript Lists
         <ul id="list">
